Extended CDevice added methods intercalation between devices and sql